tests/samples/positive/core/main_void.ax
module main_void;

fn main() -> void {
    return;
}
