tests/samples/negative/functions/prototype_inferred_return.ax
module prototype_inferred_return;

fn value();

fn main() -> i32 {
    return 0;
}
